--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <option value="Others">Others</option>
         </select><br>
         <label>Would you recommend freeCodeCamp to a friend?</label><br>
-        <input type="radio" name="reccomendq" id=""> Definitely
-        <input type="radio" name="reccomendq" id=""> Maybe
-        <input type="radio" name="reccomendq" id=""> Not Sure
+       <div id="radiobs"><input type="radio" name="reccomendq" id=""> Definitely</div>
+        <div id="radiobs"><input type="radio" name="reccomendq" id=""> Maybe</div>
+        <div id="radiobs"><input type="radio" name="reccomendq" id=""> Not Sure</div>
         <br><label>What is your favorite feature of freeCodeCamp?</label><br>
         <select name="" id="favq">
             <option disabled selected value>Select an option</option>
@@ -42,12 +42,12 @@
             <option value="Open Source">Open Source</option>
         </select><br>
         <label>What would you like to see improved? (Check all that apply)</label><br>
-        <input type="checkbox" name="" id=""> Front-end Projects
-        <input type="checkbox" name="" id=""> Back-end Projects
-        <input type="checkbox" name="" id=""> Gitter help rooms
-        <input type="checkbox" name="" id=""> Wiki
-        <input type="checkbox" name="" id=""> Videos
-        <input type="checkbox" name="" id=""> Forums
+        <div id="checkboxes"><input type="checkbox" name="" id=""> Front-end Projects</div>
+        <div id="checkboxes"><input type="checkbox" name="" id=""> Back-end Projects</div>
+        <div id="checkboxes"><input type="checkbox" name="" id=""> Gitter help rooms</div>
+        <div id="checkboxes"><input type="checkbox" name="" id=""> Wiki</div>
+        <div id="checkboxes"><input type="checkbox" name="" id=""> Videos</div>
+        <div id="checkboxes"><input type="checkbox" name="" id=""> Forums</div>
         <br>
         <br>
         <label>Any comments or suggestions?</label><br>
